--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "tailwind-build": "npx tailwind build public/dev.css -o public/production.css",
+    "build": "npm run tailwind-build && next build",
     "start": "next start"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "tailwindcss": "^1.1.4"
   }
 }
